--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,4 +8,6 @@ import Layout from '../layouts/Layout.astro';
 
 <Layout>
 	<Welcome />
+	<h1 class="font-size-sm">test</h1>
+	<h1 class="text-6xl">test</h1>
 </Layout>
