--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,9 @@
 ---
 import '@/styles/global.css';
 import '@/styles/custom-styles.css';
+
+import Header from '@/components/ui/navigation/Header.astro';
+import Footer from '@/components/ui/navigation/Footer.astro';
 ---
 
 <!doctype html>
@@ -20,10 +23,14 @@ import '@/styles/custom-styles.css';
 			name="generator"
 			content={Astro.generator}
 		/>
-		<title>Astro Basics</title>
+		<title>Worksite Leads</title>
 	</head>
 	<body>
-		<slot />
+		<Header />
+		<main>
+			<slot />
+		</main>
+		<Footer />
 	</body>
 </html>
 
