--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,8 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import Hero from '@/components/sections/home/Hero.astro';
 ---
 
-<Layout />
+<Layout>
+	<Hero />
+</Layout>
