map over nav links

--- a/src/components/sections/home/Hero.astro
+++ b/src/components/sections/home/Hero.astro
@@ -1,3 +1,7 @@
+---
+import Button from '@/components/ui/buttons/Button.astro';
+---
+
 <section
 	id="hero"
 	class="bg-container"
@@ -27,6 +31,7 @@
 			</div>
 			<div class="link-group">
 				<button>Schedule a Call</button>
+				<Button />
 				<a>Learn More</a>
 			</div>
 			<div class="video-container">
