--- a/src/components/ui/navigation/Header.astro
+++ b/src/components/ui/navigation/Header.astro
@@ -1,1 +1,34 @@
-<header></header>
+---
+const navigationLinks = [
+	{
+		name: 'home',
+		path: '/',
+	},
+	{
+		name: 'about',
+		path: '/about',
+	},
+	{
+		name: 'services',
+		path: '/services',
+	},
+	{
+		name: 'Who We Help',
+		path: '/who-we-help',
+	},
+];
+---
+
+<header class="">
+	<div class="logo">Logo</div>
+	<ul class="center-links flex gap-3">
+		{
+			navigationLinks.map((link) => (
+				<li>
+					<a href={link.path}>{link.name}</a>
+				</li>
+			))
+		}
+	</ul>
+	<ul class="action-links">Action</ul>
+</header>
