--- a/src/styles/custom-styles.css
+++ b/src/styles/custom-styles.css
@@ -30,6 +30,10 @@ body {
 	height: 100%; /* 3 */
 }
 
+html {
+	scroll-behavior: smooth;
+}
+
 /*
  * Typographic tweaks!
  * 1. Add accessible line-height
