update hamburger menu to white

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,7 +12,7 @@ interface Props {
 }
 
 const {
-	title = 'Your Site',
+	title = 'Worksite Leads',
 	description = 'Your description',
 	hasHero = false,
 } = Astro.props;
