add styling to hero section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,10 +9,10 @@ import Hero from '@/components/sections/home/Hero.astro';
 	hasHero={true}
 >
 	<Hero
-		title="Transform Your Business"
-		subtitle="We deliver cutting-edge solutions that help your business grow and succeed in the digital age"
-		bodyText="test"
-		ctaText="Start Your Journey"
+		title="<span class='text-primary-500'>Attract More Clients,</span> <br class='hidden lg:block'>Serve Them Better, Keep them Longer"
+		subtitle="Helping business get more lead, operate more efficiently & make more money"
+		bodyText=""
+		ctaText="Schedule a Call"
 		ctaHref="/contact"
 	/>
 </Layout>
