add fluid subtitle fonts

--- a/src/components/sections/home/Hero.astro
+++ b/src/components/sections/home/Hero.astro
@@ -61,9 +61,7 @@ const {
 					/>
 
 					<!-- Subtitle -->
-					<h2
-						class="subtitle text-xl sm:text-2xl text-gray-200 mx-auto font-medium"
-					>
+					<h2 class="subtitle text-primary-500 text-center">
 						{subtitle}
 					</h2>
 
