--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import '@/styles/custom-styles.css';
 import '@/styles/global.css';
 import '@/styles/fluid-typography.css';
+import '@/styles/fluid-layouts.css';
 // Layout.astro
 import Header from '@/components/ui/navigation/Header.astro';
 import Footer from '@/components/ui/navigation//Footer.astro';
