--- a/src/styles/fluid-layouts.css
+++ b/src/styles/fluid-layouts.css
@@ -1,9 +1,11 @@
 section {
 	margin: 0 auto;
+	overflow: hidden;
 }
 
 /* Contains the content within 320 - 1440 px */
 .content-container {
-	max-width: var(----content-width-max);
+	max-width: var(--content-width-max);
 	padding: clamp(1rem, -0.8571rem + 9.2857vw, 7.5rem);
+	margin: 0 auto;
 }
