add service card images and basic structure

--- a/src/components/ui/buttons/Button.astro
+++ b/src/components/ui/buttons/Button.astro
@@ -3,7 +3,7 @@ interface Props {
 	text: string;
 	href: string;
 	type?: 'button' | 'link';
-	variation: 'primary' | 'secondary';
+	variation?: 'primary' | 'secondary';
 	linkColor?: string;
 }
 
