--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,9 @@
 ---
+// Page Layout
 import Layout from '../layouts/Layout.astro';
+// Sections
 import Hero from '@/components/sections/home/Hero.astro';
+import CoreServices from '@/components/sections/home/CoreServices.astro';
 ---
 
 <Layout
@@ -15,4 +18,6 @@ import Hero from '@/components/sections/home/Hero.astro';
 		ctaText="Schedule a Call"
 		ctaHref="/contact"
 	/>
+
+	<CoreServices />
 </Layout>
