remove darkened background filter from hero section

--- a/src/components/sections/home/Hero.astro
+++ b/src/components/sections/home/Hero.astro
@@ -45,7 +45,7 @@ const {
 			densities={[1, 2]}
 		/>
 		<!-- Overlay -->
-		<div class="absolute inset-0 bg-black/40"></div>
+		<div class="absolute inset-"></div>
 	</div>
 
 	<!-- Content Container -->
