--- a/src/components/sections/home/CoreServices.astro
+++ b/src/components/sections/home/CoreServices.astro
@@ -15,6 +15,7 @@ const services = [
 		image: WebDesignImage,
 		imageAlt: 'Modern web design showcase on multiple devices',
 		href: '/services/web-design',
+		variation: '1',
 	},
 	{
 		id: 'ai-automation',
@@ -24,6 +25,7 @@ const services = [
 		image: AIAutomation,
 		imageAlt: 'AI Automation tools',
 		href: '/services/ai-automation',
+		variation: '2',
 	},
 	{
 		id: 'digital-marketing',
@@ -33,6 +35,7 @@ const services = [
 		image: DigitalMarketingImage,
 		imageAlt: 'Digital marketing analytics and social media dashboard',
 		href: '/services/digital-marketing',
+		variation: '3',
 	},
 ];
 
@@ -72,6 +75,7 @@ const {
 						image={service.image}
 						imageAlt={service.imageAlt}
 						href={service.href}
+						variation={service.variation}
 					/>
 				))
 			}
