update subtitle styles

--- a/src/components/sections/home/CoreServices.astro
+++ b/src/components/sections/home/CoreServices.astro
@@ -61,7 +61,7 @@ const {
 			>
 				{title}
 			</h2>
-			<p class="text-lg sm:text-xl text-gray-600 leading-relaxed">
+			<p class="capitalize wsl-text-lg text-gray-600 leading-relaxed">
 				{subtitle}
 			</p>
 		</div>
